# AnythingtoMarkdown

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-15-marker-initialization.md  2026-04-16-single-file-streaming.md
docs/superpowers/specs/: 2026-04-16-remove-ultra-mode-design.md
scripts/: sptool.cmd  sptool.ps1
src/sptool/: banner.py  cli.py  commands.py  executor.py  helptext.py  marker_init.py  models.py  modes.py  paths.py  routing.py  scanner.py
tests/: test_banner.py  test_cli.py  test_commands.py  test_modes.py  test_paths.py  test_routing.py  test_shell_docs.md  test_windows_wrappers.py
