[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sptool"
version = "0.1.0"
description = "SPTool markdown conversion CLI for marker and markitdown"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "spentazhou", email = "spentazhou@gmail.com" },
]
dependencies = [
  "marker-pdf[full]",
  "markitdown[all]",
  "psutil",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
script-files = ["scripts/sptool.cmd", "scripts/sptool.ps1"]

[tool.setuptools.packages.find]
where = ["src"]
